# Stokes

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  ROADMAP.md  Stokes.lean  lake-manifest.json  lakefile.toml
Stokes/: Box.lean  Global.lean  HalfSpace.lean  ManifoldForm.lean  ManifoldFormChartTransitionOpen.lean  ManifoldFormChartTransitionOpenCore.lean  ManifoldFormChartTransitionSourceSelf.lean  ManifoldFormChartTransitionSourceSelfCore.lean  ManifoldFormZero.lean  ManifoldFormZeroTransitionSupport.lean  SingularCube.lean
arxiv/: endrass_9507011.txt
blueprint/: README.md
doc/: README.md  barth-sextic.md  bibliography.md  cas-toolchain.md  degree05-lessons.md  degree08-search.md  endrass-octic-reading-notes.md  endrass-octic.md  engineering-roadmap.md  groebner-certificate-format.md  historical-roadmap.md  kummer-quartic.md  surfer-web-reuse-audit.md  togliatti-quintic.md
paper/: main.tex  references.bib
reports/: M8_public_api_audit.md  current_gap_reduction_audit.md  high_leverage_gap_audit.md  integration_dependency_audit.md  m8_end_to_end_gap_audit.md  natural_compact_support_input_collapse.md  next_integration_guard.md  orientation_map_compatibility_gap.md  orientation_membership_gap.md  remaining_input_scoreboard.md  smooth_bridge_extension_input.md  smooth_extension_mathlib_api.md  smooth_singular_bridge_gap.md  stokes-m6-field-audit.md  stokes-m6-parallel-integration.md  stokes-m7-proof-obligations.md  stokes-m8-12-agent-wave.md  stokes-m8-18-agent-wave.md  stokes-m8-agent-wave.md  stokes-m8-field-reduction.md  stokes-proof-wave.md  (+8 more)
(+749 files in other folders)
