[workspace]
members = [
    "crates/nodal-core",
    "crates/degree02",
    "crates/degree03",
    "crates/degree04",
    "crates/degree05",
    "crates/degree06",
    "crates/degree07",
    "crates/degree08",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "local"
